# pim

./: CMakeLists.txt  config.h.default  tr.sh.default
database/: CMakeLists.txt  PimDatabase.cpp  PimDatabase.h
include/: PimException.h  PimPluginInterface.h
plugins/addressbook/: AddressBookDlg.cpp  AddressBookDlg.h  AddressBookPlugin.cpp  AddressBookPlugin.h  CMakeLists.txt  PhonesWidget.cpp  PhonesWidget.h
plugins/contacts/: CMakeLists.txt  ContactDlg.cpp  ContactDlg.h  ContactsPlugin.cpp  ContactsPlugin.h
plugins/passwords/: CMakeLists.txt  PasswordsDlg.cpp  PasswordsDlg.h  PasswordsPlugin.cpp  PasswordsPlugin.h  PimPasswords_ru.ts
rc/: pim.qrc
src/: CMakeLists.txt  PimGroupDlg.cpp  PimGroupDlg.h  PimGroupsTreeWidget.cpp  PimGroupsTreeWidget.h  PimMainWindow.cpp  PimMainWindow.h  PimRecordsListWidget.cpp  PimRecordsListWidget.h  PluginManager.cpp  PluginManager.h  pim.cpp
tr/: PimAddressBook_ru.ts  PimContacts_ru.ts  PimPasswords_ru.ts  pim_ru.ts
