SET( TARGET "addressbook" )

INCLUDE_DIRECTORIES( ${PIM_SOURCE_DIR}/include )
INCLUDE_DIRECTORIES( ${PIM_SOURCE_DIR}/database )

SET( LIB_ADDRESSBOOK_SRCS
    AddressBookPlugin.cpp AddressBookDlg.cpp PhonesWidget.cpp
)
SET( LIB_ADDRESSBOOK_MOC_HDRS
    AddressBookPlugin.h AddressBookDlg.h PhonesWidget.h
)

QT4_WRAP_CPP( LIB_ADDRESSBOOK_MOC_SRCS ${LIB_ADDRESSBOOK_MOC_HDRS} )

ADD_LIBRARY( ${TARGET} SHARED ${LIB_ADDRESSBOOK_SRCS} ${LIB_ADDRESSBOOK_MOC_SRCS} )

TARGET_LINK_LIBRARIES( ${TARGET} ${QT_LIBRARIES} )

GET_TARGET_PROPERTY( LIB_ADDRESSBOOK_LOCATION ${TARGET} LOCATION )

ADD_CUSTOM_COMMAND(
    TARGET ${TARGET}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND}
    ARGS -E copy ${LIB_ADDRESSBOOK_LOCATION} ${PIM_PLUGINS_OUTPUT_DIR}
    COMMAND ${CMAKE_COMMAND}
    ARGS -E remove ${LIB_ADDRESSBOOK_LOCATION} )

INSTALL(
    TARGETS ${TARGET}
    DESTINATION ${PIM_PLUGINS_DIR} )

