SET( TARGET "passwords" )

INCLUDE_DIRECTORIES( ${PIM_SOURCE_DIR}/include )
INCLUDE_DIRECTORIES( ${PIM_SOURCE_DIR}/database )

SET( LIB_PASSWORDS_SRCS
    PasswordsPlugin.cpp PasswordsDlg.cpp
)
SET( LIB_PASSWORDS_MOC_HDRS
    PasswordsPlugin.h PasswordsDlg.h
)

QT4_WRAP_CPP( LIB_PASSWORDS_MOC_SRCS ${LIB_PASSWORDS_MOC_HDRS} )

ADD_LIBRARY( ${TARGET} SHARED ${LIB_PASSWORDS_SRCS} ${LIB_PASSWORDS_MOC_SRCS} )

TARGET_LINK_LIBRARIES( ${TARGET} ${QT_LIBRARIES} )

GET_TARGET_PROPERTY( LIB_PASSWORDS_LOCATION ${TARGET} LOCATION )

ADD_CUSTOM_COMMAND(
    TARGET ${TARGET}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND}
    ARGS -E copy ${LIB_PASSWORDS_LOCATION} ${PIM_PLUGINS_OUTPUT_DIR}
    COMMAND ${CMAKE_COMMAND}
    ARGS -E remove ${LIB_PASSWORDS_LOCATION} )

INSTALL(
    TARGETS ${TARGET}
    DESTINATION ${PIM_PLUGINS_DIR} )

